added highlights for code

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
+
+  <!-- Rainbow: syntax highlighting library -->
+  <link href="./styles/code.css" rel="stylesheet" type="text/css">
+  <script src="./scripts/rainbow-custom.min.js"></script>
+
   <link rel="shortcut icon" href="./Icon.svg">
+
   <title>Describe.me</title>
 </head>
 <body>
